Implementando rotas de cadastro, login e recuperação de senha. instalando novas bibliotecas de layout

--- a/cursoADVweb/src/app/acesso/pages/login/login.component.html
+++ b/cursoADVweb/src/app/acesso/pages/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div class="row">
+  <div class="col-6">
+    <form class="example-form flex-wrap">
+      <mat-form-field class="example-full-width">
+        <mat-label>Favorite food</mat-label>
+        <input matInput placeholder="Ex. Pizza" value="Sushi">
+      </mat-form-field>
+
+      <mat-form-field class="example-full-width">
+        <mat-label>Leave a comment</mat-label>
+        <textarea matInput placeholder="Ex. It makes me feel..."></textarea>
+      </mat-form-field>
+    </form>
+  </div>
+  <div class="col-6">
+    teste2
+  </div>
+</div>
