--- a/cursoADVweb/src/app/acesso/pages/login/login.component.html
+++ b/cursoADVweb/src/app/acesso/pages/login/login.component.html
@@ -31,7 +31,7 @@
             </div>
 
 
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+            <button (click)="login()" class="w-100 btn btn-lg btn-primary" type="button">Login</button>
             <hr class="my-4">
             <!-- <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small> -->
           </form>
