Implementando novas rotas e nova sideBar

--- a/cursoADVweb/src/app/acesso/pages/login/login.component.html
+++ b/cursoADVweb/src/app/acesso/pages/login/login.component.html
@@ -1,81 +1,10 @@
-<div class="row">
-  <div class="row">
-    <div class="quadrado {{possuiCadastro? 'login':'cadastro'}}">
-      <button (click)="possuiCadastro = !possuiCadastro" mat-fab extended color="{{!possuiCadastro?'primary':'accent'}}">
-        <mat-icon>favorite</mat-icon>
-        {{!possuiCadastro?'Cadastrar':'Possuo cadastro'}}
-      </button>
-    </div>
+<div class="row d-flex p-3 ps-4 text-light ">
+  <div style="width: auto; padding-right:0px;" class="align-self-end">
+    pagina em construção!
   </div>
-  <div class="col-6 container px-4 py-5">
-      <div class="row align-items-center g-lg-5 py-5 example-container">
-        <div class="w-100 mx-auto ">
-          <form [formGroup]="formularioLogin" class="p-4 m-5 p-md-5 border rounded-3 bg-body-tertiary">
-            <h1 class="mb-4">Já estuda com a gente?</h1>
-            <div class="w-100">
-              <mat-form-field appearance="outline">
-                <mat-label>Email</mat-label>
-                <input matInput placeholder="email@gmail.com">
-                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-              </mat-form-field>
-            </div>
-
-            <div class="w-100">
-              <mat-form-field appearance="outline">
-                <mat-label>Senha</mat-label>
-                <input matInput placeholder="Digite sua senha">
-                <button mat-icon-button matSuffix (click)="visivel = !visivel" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="visivel">
-                  <mat-icon>{{visivel ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-              </mat-form-field>
-            </div>
-
-
-            <button (click)="login()" class="w-100 btn btn-lg btn-primary" type="button">Login</button>
-            <hr class="my-4">
-            <!-- <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small> -->
-          </form>
-        </div>
-      </div>
-  </div>
-  <div class="col-6 container px-4 py-5">
-      <div class="row align-items-center g-lg-5 py-5">
-        <div class="w-100 mx-auto">
-          <form [formGroup]="formularioCadastro" class="p-4 m-5 p-md-5 border rounded-3 bg-body-tertiary">
-            <h1>Faça a sua matrícula na <b>centroProInfo</b></h1>
-            <div class="form-floating mb-3">
-              <input type="Nome" formControlName="Nome" class="form-control" id="Nome" placeholder="Nome">
-              <label for="Nome">Nome</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="SobreNome" formControlName="SobreNome" class="form-control" id="SobreNome" placeholder="Sobrenome">
-              <label for="SobreNome">Sobrenome</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="email" formControlName="Email" class="form-control" id="email" placeholder="email">
-              <label for="email">Email</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="telefone" formControlName="Telefone" class="form-control" id="telefone" placeholder="telefone">
-              <label for="telefone">Telefone</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="telefone" formControlName="Senha" class="form-control" id="telefone" placeholder="telefone">
-              <label for="telefone">Senha</label>
-            </div>
-
-            <!-- <div class="checkbox mb-3">
-              <label>
-                <input type="checkbox" value="remember-me"> Lembrar
-              </label>
-            </div> -->
-            <button (click)="cadastrar()" class="w-100 btn btn-lg btn-primary" type="button">Cadastrar</button>
-            <hr class="my-4">
-            <!-- <small class="text-body-secondary">By clicking Sign up, you agree to the terms of use.</small> -->
-          </form>
-        </div>
-      </div>
-  </div>
+  <span class="material-icons" style="width: auto;">
+    construction
+  </span>
 </div>
 
 
