--- a/cursoADVweb/src/styles.scss
+++ b/cursoADVweb/src/styles.scss
@@ -1,11 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
   --mdc-outlined-text-field-focus-label-text-color: rgb(255, 255, 255);
-  --mat-icon-color: rgb(255, 255, 255);;
+  --mat-icon-color: rgb(255, 255, 255);
+  --bs-box-shadow-sm: 0 0.225rem 0.25rem rgba(0, 0, 0, 0.095);
+}
+
+.btn-warning {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #f1b04d;
+  --bs-btn-border-color: #ffc107;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #ffc107;
+  --bs-btn-hover-border-color: #ffc720;
+  --bs-btn-focus-shadow-rgb: 217, 164, 6;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #ffcd39;
+  --bs-btn-active-border-color: #ffc720;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #ffc107;
+  --bs-btn-disabled-border-color: #ffc107;
 }
 
 html, body { height: 100%; }
-body { background-color: #303030;
+body { background-color: #fdfdfd;
   margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;  }
 
 .bg-body-tertiary {
@@ -18,4 +36,11 @@ body { background-color: #303030;
 .mat-mdc-form-field{
   width: 100%;
 
+}
+
+
+.main{
+  margin-top: 58px;
+  padding-left: 69px;
+  padding-right: 69px;
 }
