--- a/cursoADVweb/src/styles.scss
+++ b/cursoADVweb/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
-  --mdc-outlined-text-field-focus-label-text-color: rgb(255, 255, 255);
+  --mdc-outlined-text-field-focus-label-text-color: #842723;
   --mat-icon-color: rgb(255, 255, 255);
   --bs-box-shadow-sm: 0 0.225rem 0.25rem rgba(0, 0, 0, 0.095);
+  --vermelhoProInf: #842723;
 }
 
 .btn-warning {
@@ -40,7 +41,106 @@ body { background-color: #fdfdfd;
 
 
 .main{
-  margin-top: 58px;
+  margin-top: 44px;
   padding-left: 69px;
   padding-right: 69px;
+}
+
+.mat-mdc-form-field:not(.mat-form-field-disabled) .mat-mdc-floating-label.mdc-floating-label {
+  cursor: inherit;
+  //color: #842723;
+}
+
+.mdc-text-field--outlined {
+  --mdc-outlined-text-field-container-shape: 28px !important;
+}
+
+
+.mat-mdc-form-field .mdc-text-field--outlined .mdc-notched-outline--upgraded .mdc-floating-label--float-above {
+    // color: #842723 !important;
+    --mdc-outlined-text-field-outline-color: var(--vermelhoProInf) ;
+}
+
+/* Change the border focused color */
+.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-notched-outline__leading,
+.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-notched-outline__notch,
+.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-notched-outline__trailing {
+  border-color: var(--vermelhoProInf) !important;
+
+}
+
+/* Change the border hover color */
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__leading,
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__notch,
+.mdc-text-field--outlined:not(.mdc-text-field--disabled):not(.mdc-text-field--focused):hover .mdc-notched-outline .mdc-notched-outline__trailing {
+  border-color: var(--vermelhoProInf) !important;
+}
+
+.form-angular-material .mdc-text-field--outlined{
+  background-color: #FFEDEB;
+  border-radius: 28px;
+}
+
+.form-angular-material {
+  --mdc-outlined-text-field-label-text-color: var(--vermelhoProInf) !important;
+  --mdc-outlined-text-field-input-text-color: var(--vermelhoProInf) !important;
+  input.mat-input-element {
+    color: var(--vermelhoProInf);
+  }
+
+  .mat-mdc-form-field .mdc-text-field--outlined .mdc-notched-outline--upgraded .mdc-floating-label--float-above {
+    // transform: translateY(-1.4em) scale(.75) !important;
+    transform: translateY(-1.6em) scale(.75)!important;
+    // width: 133.33333%;
+  }
+
+  .mat-mdc-select-value{
+    font-size: 14px !important;
+  }
+
+   .mat-mdc-form-field {
+    padding: 0.0em 0px !important;
+    font-size: 14px !important;
+  }
+
+  .form-floating>.form-control:focus~label{
+    color: var(--vermelhoProInf) !important;
+    transform: scale(.85) translateY(-2.1rem) translate(0.15rem) !important;
+  }
+
+
+  .mat-mdc-text-field-wrapper .mat-mdc-form-field-flex .mat-mdc-floating-label {
+    top: 18px;
+  }
+
+  .mat-mdc-form-field-has-icon-suffix .mat-mdc-text-field-wrapper {
+    padding-right: 0;
+    //padding: -4.6em -1px !important;
+    height: 41px !important;
+  }
+
+  .mat-mdc-text-field-wrapper {
+    height: 41px;
+    flex: auto;
+  }
+
+   .mat-mdc-text-field-wrapper.mdc-text-field--outlined .mat-mdc-form-field-infix {
+    padding-top: 11px;
+    padding-bottom: 11px;
+  }
+
+   .mat-mdc-form-field-icon-suffix>.mat-icon {
+    padding-top: 4px !important;
+    padding: 12px;
+    box-sizing: content-box;
+    transform: translateY(-0.1em) scale(.95) !important;
+  }
+
+  .mat-mdc-form-field-subscript-wrapper {
+    height: 13px;
+  }
+
+  .mdc-text-field--outlined {
+  --mdc-outlined-text-field-outline-color: var(--vermelhoProInf);
+  }
 }
