--- a/cursoADVweb/src/app/components/sidebar/sidebar.component.html
+++ b/cursoADVweb/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
-<div class="d-flex flex-wrap w-100 justify-content-center main">
+<div class="d-flex flex-wrap w-100 justify-content-center {{isMobile? 'mt-5': 'main'}}">
   <div class="col-sm-12 col-md-3 col-lg-3">
     <img src="../../../assets/imgs/LogoTeste.png" height="80">
 
   </div>
-  <div class="col-sm-6 col-md-6 col-lg-6 d-flex align-self-center pt-3">
-    <div class="col-8 form-angular-material">
+  <div class="col-sm-10 col-md-6 col-lg-6 d-flex align-self-center pt-3">
+    <div class="col-sm-10 col-md-8 col-lg-8 form-angular-material">
       <mat-form-field class="ms-3" style="width: 93%;" appearance="outline">
         <mat-label>Procure no site...</mat-label>
         <input (click)="buscar()" matInput formControlName="pesquisa" placeholder="Procure no site..." type="text" autocomplete="off">
@@ -13,20 +13,21 @@
         </mat-icon>
       </mat-form-field>
     </div>
-    <div style="color: #842723" class="col-1 d-flex justify-content-center fs-1 pt-2"> | </div>
-    <div class="col-3 pt-1">
+    <div *ngIf="!isMobile" style="color: #842723" class="col-1 d-flex justify-content-center fs-1 pt-2"> | </div>
+    <div *ngIf="!isMobile" class="col-3 pt-1">
       <button disabled class="btn btn-sm btn-outline-secondary me-2">A+</button>
       <button disabled class="btn btn-sm btn-outline-secondary me-2">A-</button>
       <button disabled class="btn btn-sm btn-outline-secondary">C</button>
     </div>
   </div>
-  <div class="col-sm-6 col-md-2 col-lg-2 align-self-center d-flex justify-content-end">
-    <button type="button" style="width: 150px;"
+  <div class="col-sm-2 col-md-2 col-lg-2 align-self-center d-flex justify-content-end">
+    <button class="{{isMobile?'ms-3':''}}" type="button" [style]="isMobile?'': 'width: 150px;'"
     class="overlay-layer btn btn-sm btn-warning icon-button d-flex text-start shadow-sm rounded">
-      <i style="font-size: 46px;" class="material-icons me-2">perm_identity</i>
-      <div class="" style="font-size: 15px;">
+      <!-- <i style="font-size: 46px;" class="material-icons me-2">perm_identity</i> -->
+      <img src="../../../assets/imgs/bonecoLivro.png" height="{{isMobile? '30':'50'}}">
+      <strong *ngIf="!isMobile" class="text-light defineFontBtns ps-2" style="font-size: 15px;">
         ÁREA DO ALUNO
-      </div>
+      </strong>
     </button>
 
   </div>
