--- a/cursoADVweb/src/app/components/sidebar/sidebar.component.html
+++ b/cursoADVweb/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-wrap w-100 justify-content-center {{isMobile? 'mt-5': 'main'}}">
-  <div class="col-sm-12 col-md-3 col-lg-3">
+  <div class="col-sm-12 col-md-3 col-lg-3" *ngIf="!isMobile">
     <img src="../../../assets/imgs/LogoTeste.png" height="80">
 
   </div>
