--- a/cursoADVweb/src/styles.scss
+++ b/cursoADVweb/src/styles.scss
@@ -8,6 +8,10 @@
   --bs-link-hover-color: #e64944;
 }
 
+.defineCorBar{
+  background-color: #ffedeb !important;
+}
+
 .btn-warning {
   --bs-btn-color: #000;
   --bs-btn-bg: #f1b04d;
@@ -37,6 +41,11 @@
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+}
+
+.navbar {
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(132,39,35, 1), 37, 41, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+
 }
 
 html, body { height: 100%; }
