--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -65,15 +65,27 @@
   <div class="col-12 d-flex flex-wrap justify-content-center">
     <div class="col-sm-12 col-md-4 col-lg-4 container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
       <img src="../../../../assets/imgs/fundamento 1.png" class="image" height="350" width="100%">
-      <p class="text defineFont"><strong><h1 class="text-center">ESPECIALIZAÇÃO PROFUNDA EM ECA</h1></strong></p>
+      <h1 class="text-center">
+        <p class="text defineFont" style="width: 60%;">
+          <strong>ESPECIALIZAÇÃO PROFUNDA EM ECA</strong>
+        </p>
+        </h1>
     </div>
     <div class="col-sm-12 col-md-4 col-lg-4 container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
       <img src="../../../../assets/imgs/fundamento 2.png" class="image" height="350" width="100%">
-      <p class="text defineFont"><strong><h1 class="text-center">METODOLOGIA INOVADORA</h1></strong></p>
+      <h1 class="text-center">
+        <p class="text defineFont" style="width: 60%;">
+          <strong>METODOLOGIA INOVADORA</strong>
+        </p>
+      </h1>
     </div>
     <div class="col-sm-12 col-md-4 col-lg-4 container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
       <img src="../../../../assets/imgs/fundamento 3.png" class="image" height="350" width="100%">
-      <p class="text defineFont"><strong><h1 class="text-center">SUPORTE PERSONALIZADO E COMUNIDADE</h1></strong></p>
+      <h1 class="text-center">
+        <p class="text defineFont" style="width: 60%;">
+          <strong>SUPORTE PERSONALIZADO E COMUNIDADE</strong>
+        </p>
+      </h1>
     </div>
 
   </div>
