--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -38,7 +38,6 @@
       <div class="col-12 align-self-center d-flex justify-content-start mt-3">
         <button class="w-100" type="button"
         class="overlay-layer btn btn-sm btn-outline-dark icon-button d-flex text-start shadow-sm rounded">
-          <i style="font-size: 46px;" class="material-icons me-2">perm_identity</i>
           <strong class="defineFontBtns ps-2 pt-1" style="font-size: 25px;">
             Conheça nossa equipe...
           </strong>
@@ -52,7 +51,7 @@
   </div>
 </div>
 
-<div class="col-12 d-flex flex-wrap {{isMobile?'':'px-5'}}"  [style]="isMobile? 'margin-top: 5rem !important;':''">
+<div class="imagensQueViram col-12 d-flex flex-wrap {{isMobile?'':'px-5'}}"  [style]="isMobile? 'margin-top: 5rem !important;':''">
   <div class="col-sm-12 col-md-12 col-lg-12 defineFont {{isMobile? 'mx-3':'pe-5'}}">
     <h1 class="" style="color:#EE5b54"> <strong style="font-size: 33px;">NOSSOS FUNDAMENTOS</strong></h1>
     <p class="fs-5 mt-4" style="text-align: justify; line-height:1.5">
@@ -62,31 +61,208 @@
       garantir não apenas a absorção do conteúdo necessário, mas também para desenvolver uma
       compreensão profunda e aplicada do material.</p>
   </div>
-  <div class="col-12 d-flex flex-wrap justify-content-center">
-    <div class="col-sm-12 col-md-4 col-lg-4 container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
-      <img src="../../../../assets/imgs/fundamento 1.png" class="image" height="350" width="100%">
-      <h1 class="text-center">
-        <p class="text defineFont" style="width: 60%;">
-          <strong>ESPECIALIZAÇÃO PROFUNDA EM ECA</strong>
-        </p>
+  <div class="row d-flex flex-wrap justify-content-center pe-4">
+    <div (mouseover)="isMobile?'':virar(1)" (mouseout)="isMobile?'':desVirar(1)" (click)="vira? desVirar(1):virar(1)" class="col-sm-12 col-md-4 col-lg-4">
+      <div [style]="vira?'display: none;':'display: block;'"class="w-100 container {{vira? 'virar': 'desVirar'}} {{isMobile? 'mx-3 mt-3':'pe-2'}} ">
+        <img src="../../../../assets/imgs/fundamento 1.png" class="image" height="350" width="100%">
+        <h1 class="text-center">
+          <p class="text defineFont" style="width: 60%;">
+            <strong>ESPECIALIZAÇÃO PROFUNDA EM ECA</strong>
+          </p>
+          </h1>
+      </div>
+      <div [style]="!vira?'display: none;':'display: block;'" (click)="!vira? desVirar(1):virar(1)" class="w-100 container {{vira? 'desVirar': 'virar'}} {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+        <img src="../../../../assets/imgs/fundamento 1.png" class="image" height="350" width="100%">
+        <h4 class="text-center">
+          <p class="text defineFont" style="width: 60%;">
+            <strong>{{texto.toLocaleUpperCase()}}</strong>
+          </p>
+          </h4>
+      </div>
+    </div>
+    <div (mouseover)="isMobile?'':virar(2)" (mouseout)="isMobile?'':desVirar(2)" (click)="vira? desVirar(2):virar(2)" class="col-sm-12 col-md-4 col-lg-4">
+      <div [style]="vira2?'display: none;':'display: block;'" class=" w-100 {{vira2? 'virar': 'desVirar'}} container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+        <img src="../../../../assets/imgs/fundamento 2.png" class="image" height="350" width="100%">
+        <h1 class="text-center">
+          <p class="text defineFont" style="width: 60%;">
+            <strong>METODOLOGIA INOVADORA</strong>
+          </p>
         </h1>
+      </div>
+      <div  [style]="!vira2?'display: none;':'display: block;'" class=" w-100 {{vira2? 'desVirar': 'virar'}} container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+        <img src="../../../../assets/imgs/fundamento 2.png" class="image" height="350" width="100%">
+        <h4 class="text-center">
+          <p class="text defineFont" style="width: 60%;">
+            <strong>{{texto2.toLocaleUpperCase()}}</strong>
+          </p>
+        </h4>
+      </div>
     </div>
-    <div class="col-sm-12 col-md-4 col-lg-4 container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
-      <img src="../../../../assets/imgs/fundamento 2.png" class="image" height="350" width="100%">
-      <h1 class="text-center">
-        <p class="text defineFont" style="width: 60%;">
-          <strong>METODOLOGIA INOVADORA</strong>
-        </p>
-      </h1>
+    <div (mouseover)="isMobile?'':virar(3)" (mouseout)="isMobile?'':desVirar(3)" (click)="vira? desVirar(3):virar(3)" class="col-sm-12 col-md-4 col-lg-4">
+      <div [style]="vira3?'display: none;':'display: block;'" class=" w-100 {{vira3? 'virar': 'desVirar'}} container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+        <img src="../../../../assets/imgs/fundamento 3.png" class="image" height="350" width="100%">
+        <h1 class="text-center">
+          <p class="text defineFont" style="width: 60%;">
+            <strong>SUPORTE PERSONALIZADO E COMUNIDADE</strong>
+          </p>
+        </h1>
+      </div>
+      <div [style]="!vira3?'display: none;':'display: block;'"  class=" w-100 {{vira3? 'desVirar': 'virar'}} container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+        <img src="../../../../assets/imgs/fundamento 3.png" class="image" height="350" width="100%">
+        <h4 class="text-center">
+          <p class="text defineFont" style="width: 60%;">
+            <strong>{{texto3.toLocaleUpperCase()}}</strong>
+          </p>
+        </h4>
+      </div>
     </div>
-    <div class="col-sm-12 col-md-4 col-lg-4 container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
-      <img src="../../../../assets/imgs/fundamento 3.png" class="image" height="350" width="100%">
-      <h1 class="text-center">
-        <p class="text defineFont" style="width: 60%;">
-          <strong>SUPORTE PERSONALIZADO E COMUNIDADE</strong>
-        </p>
-      </h1>
-    </div>
-
   </div>
 </div>
+
+<div class="row justify-content-center mt-5 fundoRosa">
+  <div class="col-8 col-sm-8 col-md-3 col-lg-3 d-flex" [style]="isMobile? 'left: -31px;':'left: -24px;'" style="top: -24px; position: relative;" >
+    <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5"></div>
+    <div class=" col-3">
+      <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+    </div>
+    <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-4 mt-4 col-5"></div>
+  </div>
+</div>
+<div class="row fundoRosa ">
+  <div class="col-12 {{isMobile? 'px-4':''}}" style="position: relative; top: 27px;" [style]="isMobile?'':'padding-right: 6rem !important; padding-left: 6rem !important;'">
+    <h1 class="" style="color: #EE5b54; font-size: 43px;"><strong>COMECE A ESTUDAR</strong></h1>
+
+    <h3 class="defineFont pt-3 pb-3" style="font-size: 23px;">Veja agora os nossos cursos disponíveis</h3>
+
+    <div id="cursosCarousel" class="carousel slide mt-3">
+      <div class="carousel-indicators" >
+        <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#cursosCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        @for(banner of ListaBannersCursos; track banner; let i = $index){
+          <div class="carousel-item {{i==0?'active':''}}">
+            <img src="{{banner.src}}" class="d-block w-100" alt="...">
+          </div>
+        }
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#cursosCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#cursosCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+</div>
+<div class="row d-flex mt-5">
+  <div class="col-1 pe-2 d-flex justify-content-center ms-5 mt-4">
+    <span class="material-icons fs-1" style="color: #EE5b54; font-size: 3.5rem !important;">
+      notifications_none
+    </span>
+
+    <div style="font-size: 3.5rem !important;" class=" mt-1 fs-1 pt-2 mx-4"> | </div>
+  </div>
+  <div class="col fs-1 defineFont {{isMobile? 'ps-5':''}}" style="margin-top: 2.3rem !important;">
+    <strong>
+      ÚLTIMAS NOTÍCIAS
+    </strong>
+  </div>
+  <div class="row ps-5">
+    <div class="col-12">
+      <div class="mb-4 mt-5" style="max-width: 100%;">
+        <div class="row g-0">
+          <div class="p-3 col-sm-12 col-md-6 col-lg-6">
+            <div class="dataCard m-3">
+              <div class="fs-3" style="color: #EE5b54;"><strong>11</strong></div>
+              <div class="fs-6 pt-1">JUN</div>
+            </div>
+            <div class="col-md-12">
+              <img src="../../../../assets/imgs/fundamento 3.png" style="border-radius: 6px;" class="img-fluid rounded-start" >
+            </div>
+          </div>
+          <div class="col-md-6 p-3">
+            <div class="" style="border-radius: 6px;">
+              <p class="mt-4" style="text-align: justify; line-height:1.5; font-size: 2.25rem !important;">Lei 10.639/03: pesquisa inédita
+                traz práticas inspiradoras de seis
+                municípios que promovem o
+                ensino de história e cultura
+                africana e afro-brasileira
+                </p>
+            </div>
+            <div class="w-100 d-flex {{isMobile?'flex-wrap justify-content-center':''}}">
+              <div [style]="isMobile?'display:none':'display: block;'" class="fs-3 pe-3 mt-2">
+                .......................................................
+              </div>
+              <button type="button"
+              class=" {{isMobile?'w-100 d-flex justify-content-center':''}} overlay-layer btn btn-sm btn-danger icon-button d-flex text-start shadow-sm rounded ">
+                <strong class="defineFontBtns" style="font-size: 25px;">
+                  Ler mais
+                </strong>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 align-self-center d-flex justify-content-start mt-3">
+      <button class="w-100" type="button"
+      class="overlay-layer btn btn-sm btn-outline-dark icon-button d-flex text-start shadow-sm rounded">
+        <strong class="defineFontBtns ps-2 pt-1" style="font-size: 25px;">
+          Veja mais notícias...
+        </strong>
+        <img src="../../../../assets/imgs/setaAmarela.png" height="40">
+      </button>
+    </div>
+  </div>
+
+</div>
+<div class="row justify-content-center mt-5 fundoRosa">
+  <div class="col-8 col-sm-8 col-md-3 col-lg-3 d-flex" [style]="isMobile? 'left: -31px;':'left: -24px;'" style="top: -24px; position: relative;" >
+    <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5"></div>
+    <div class=" col-3">
+      <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+    </div>
+    <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-4 mt-4 col-5"></div>
+  </div>
+</div>
+
+<div class="row fundoRosa ">
+  <div class="imagemDeFundo" [style]="isMobile? 'left: -24%;':'left: 15%;'">
+
+  </div>
+  <div style="position: absolute;">
+    <div class="row d-flex justify-content-center text-center">
+      <h1>
+        <strong class="fs-2">
+          RELATOS DE ALUNOS QUE FORAM APROVADOS
+        </strong>
+      </h1>
+    </div>
+    <div class="row">
+      <div class="containerSlide justify-content-center d-flex">
+        <img (click)="direita()" src="../../../../assets/imgs/seta 2.png" class="setaDireita">
+        <img (click)="esquerda()" src="../../../../assets/imgs/seta 1.png" class="setaEsquerda">
+
+        @for(avaliacoes of ListaAvaliacoes; track avaliacoes; let i = $index){
+          <div id="{{i}}" class="card {{avaliacoes.css}} m-1 mx-3" style="width: 18rem;">
+            <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+            <div class="card-body">
+              <h5 class="card-title">{{avaliacoes.nome}}</h5>
+              <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+              <a href="#" class="btn btn-primary">Visitar</a>
+            </div>
+          </div>
+        }
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
