--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.scss
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.scss
@@ -1,3 +1,7 @@
+:root{
+  --ver-img: none;
+}
+
 .container {
   position: relative;
 }
@@ -15,4 +19,42 @@
   left: 50%;
 
   color:azure;
+}
+
+.imagemDeFundo{
+  position: relative;
+  top: -38px;
+  transform: rotate(10deg);
+  opacity: 0.3;
+  left: 15%;
+  background: url('../../../../assets/imgs/divideNoMeio.png') no-repeat;
+  width: 100%;
+  height: 600px;
+}
+
+.containerSlide {
+  position: relative;
+  background: lightgray;
+}
+
+.setaDireita {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  right: 5px;    // 5px com relação à margem direita do elemento html (ou seja, se deslocando da direita - do elemento html - para a esquerda)
+  top: 73px;
+
+}
+
+.setaDireita:hover{
+  color: rgb(204, 206, 207);
+}
+
+.setaEsquerda{
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  left: 20px;
+  top: 73px;
+
 }
