--- a/cursoADVweb/src/styles.scss
+++ b/cursoADVweb/src/styles.scss
@@ -132,12 +132,21 @@ body { background-color: #fdfdfd;
   font-family: Gordita !important;
 }
 
+.defineFontGordita{
+  font-family: Gordita !important;
+}
+
 .defineFont{
   font-family: Open Sans !important;
 }
 
 .defineFontBold{
   font-family: Open SansBold !important;
+}
+
+.formataParagrafos{
+  text-align: justify;
+  line-height:1.5
 }
 
 .dataCard{
