--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -21,10 +21,10 @@
   </button>
 </div>
 
-<div class="col-12 d-flex flex-wrap" [style]="isMobile? 'margin-top: 5rem !important;':'padding-left: 3rem !important; margin-top: 5rem !important;'">
+<div class="col-12 d-flex flex-wrap" [style]="isMobile? 'margin-top: 5rem !important;':'padding-left: 5rem !important; margin-top: 5rem !important;'">
   <div class="col-sm-12 col-md-6 col-lg-6 defineFont {{isMobile? 'mx-3':'pe-5'}}">
     <h1 class="" style="color:#EE5b54"> <strong style="font-size: 33px;">O CENTRO PROINF</strong></h1>
-    <p class="fs-5 mt-4" style="text-align: justify; line-height:1.5">
+    <p class="fs-5 mt-4 formataParagrafos">
       A ProInf emerge como um farol de excelência e
       inovação no campo da proteção à infância e
       juventude, dedicando-se a capacitar aqueles
@@ -51,7 +51,7 @@
   </div>
 </div>
 
-<div class="imagensQueViram col-12 d-flex flex-wrap {{isMobile?'':'px-5'}}"  [style]="isMobile? 'margin-top: 5rem !important;':''">
+<div class="imagensQueViram col-12 d-flex flex-wrap {{isMobile?'':'px-5'}}"  [style]="isMobile? 'margin-top: 5rem !important;':'padding-left: 5rem !important; '">
   <div class="col-sm-12 col-md-12 col-lg-12 defineFont {{isMobile? 'mx-3':'pe-5'}}">
     <h1 class="" style="color:#EE5b54"> <strong style="font-size: 33px;">NOSSOS FUNDAMENTOS</strong></h1>
     <p class="fs-5 mt-4" style="text-align: justify; line-height:1.5">
@@ -61,9 +61,9 @@
       garantir não apenas a absorção do conteúdo necessário, mas também para desenvolver uma
       compreensão profunda e aplicada do material.</p>
   </div>
-  <div class="row d-flex flex-wrap justify-content-center pe-4">
+  <div class="w-100 d-flex flex-wrap justify-content-center">
     <div (mouseover)="isMobile?'':virar(1)" (mouseout)="isMobile?'':desVirar(1)" (click)="vira? desVirar(1):virar(1)" class="col-sm-12 col-md-4 col-lg-4">
-      <div [style]="vira?'display: none;':'display: block;'"class="w-100 container {{vira? 'virar': 'desVirar'}} {{isMobile? 'mx-3 mt-3':'pe-2'}} ">
+      <div [style]="vira?'display: none;':'display: block;'" style="position: relative;" class="w-100 {{vira? 'virar': 'desVirar'}} {{isMobile? 'mt-3':'pe-2'}} ">
         <img src="../../../../assets/imgs/fundamento 1.png" class="image" height="350" width="100%">
         <h1 class="text-center">
           <p class="text defineFont" style="width: 60%;">
@@ -71,7 +71,7 @@
           </p>
           </h1>
       </div>
-      <div [style]="!vira?'display: none;':'display: block;'" (click)="!vira? desVirar(1):virar(1)" class="w-100 container {{vira? 'desVirar': 'virar'}} {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+      <div [style]="!vira?'display: none;':'display: block;'" style="position: relative;" (click)="!vira? desVirar(1):virar(1)" class="w-100 {{vira? 'desVirar': 'virar'}} {{isMobile? 'mt-3':'pe-2'}}">
         <img src="../../../../assets/imgs/fundamento 1.png" class="image" height="350" width="100%">
         <h4 class="text-center">
           <p class="text defineFont" style="width: 60%;">
@@ -81,7 +81,7 @@
       </div>
     </div>
     <div (mouseover)="isMobile?'':virar(2)" (mouseout)="isMobile?'':desVirar(2)" (click)="vira? desVirar(2):virar(2)" class="col-sm-12 col-md-4 col-lg-4">
-      <div [style]="vira2?'display: none;':'display: block;'" class=" w-100 {{vira2? 'virar': 'desVirar'}} container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+      <div [style]="vira2?'display: none;':'display: block;'" style="position: relative;" class=" w-100 {{vira2? 'virar': 'desVirar'}} {{isMobile? 'mt-3':'pe-2'}}">
         <img src="../../../../assets/imgs/fundamento 2.png" class="image" height="350" width="100%">
         <h1 class="text-center">
           <p class="text defineFont" style="width: 60%;">
@@ -89,7 +89,7 @@
           </p>
         </h1>
       </div>
-      <div  [style]="!vira2?'display: none;':'display: block;'" class=" w-100 {{vira2? 'desVirar': 'virar'}} container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+      <div  [style]="!vira2?'display: none;':'display: block;'" style="position: relative;" class=" w-100 {{vira2? 'desVirar': 'virar'}} {{isMobile? 'mt-3':'pe-2'}}">
         <img src="../../../../assets/imgs/fundamento 2.png" class="image" height="350" width="100%">
         <h4 class="text-center">
           <p class="text defineFont" style="width: 60%;">
@@ -99,7 +99,7 @@
       </div>
     </div>
     <div (mouseover)="isMobile?'':virar(3)" (mouseout)="isMobile?'':desVirar(3)" (click)="vira? desVirar(3):virar(3)" class="col-sm-12 col-md-4 col-lg-4">
-      <div [style]="vira3?'display: none;':'display: block;'" class=" w-100 {{vira3? 'virar': 'desVirar'}} container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+      <div [style]="vira3?'display: none;':'display: block;'" style="position: relative;" class=" w-100 {{vira3? 'virar': 'desVirar'}} {{isMobile? 'mt-3':'pe-2'}}">
         <img src="../../../../assets/imgs/fundamento 3.png" class="image" height="350" width="100%">
         <h1 class="text-center">
           <p class="text defineFont" style="width: 60%;">
@@ -107,7 +107,7 @@
           </p>
         </h1>
       </div>
-      <div [style]="!vira3?'display: none;':'display: block;'"  class=" w-100 {{vira3? 'desVirar': 'virar'}} container {{isMobile? 'mx-3 mt-3':'pe-2'}}">
+      <div [style]="!vira3?'display: none;':'display: block;'" style="position: relative;" class=" w-100 {{vira3? 'desVirar': 'virar'}} {{isMobile? 'mt-3':'pe-2'}}">
         <img src="../../../../assets/imgs/fundamento 3.png" class="image" height="350" width="100%">
         <h4 class="text-center">
           <p class="text defineFont" style="width: 60%;">
@@ -119,7 +119,7 @@
   </div>
 </div>
 
-<div class="row justify-content-center mt-5 fundoRosa">
+<div class="w-100 d-flex justify-content-center mt-5 fundoRosa">
   <div class="col-8 col-sm-8 col-md-3 col-lg-3 d-flex" [style]="isMobile? 'left: -31px;':'left: -24px;'" style="top: -24px; position: relative;" >
     <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5"></div>
     <div class=" col-3">
@@ -128,9 +128,10 @@
     <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-4 mt-4 col-5"></div>
   </div>
 </div>
-<div class="row fundoRosa ">
+
+<div class="w-100 fundoRosa ">
   <div class="col-12 {{isMobile? 'px-4':''}}" style="position: relative; top: 27px;" [style]="isMobile?'':'padding-right: 6rem !important; padding-left: 6rem !important;'">
-    <h1 class="" style="color: #EE5b54; font-size: 43px;"><strong>COMECE A ESTUDAR</strong></h1>
+    <h1 class="" style="color: #EE5b54; font-size: 40px;"><strong>COMECE A ESTUDAR</strong></h1>
 
     <h3 class="defineFont pt-3 pb-3" style="font-size: 23px;">Veja agora os nossos cursos disponíveis</h3>
 
@@ -158,8 +159,9 @@
     </div>
   </div>
 </div>
-<div class="row d-flex mt-5">
-  <div class="col-1 pe-2 d-flex justify-content-center ms-5 mt-4">
+
+<div class="w-100 d-flex flex-wrap" style="    padding-left:2rem !important; padding-top: 5rem;">
+  <div class="col-1 pe-2 d-flex justify-content-center mt-4" [style]="isMobile?'margin-left: 2rem !important;':'margin-left: 4rem !important;'">
     <span class="material-icons fs-1" style="color: #EE5b54; font-size: 3.5rem !important;">
       notifications_none
     </span>
@@ -171,9 +173,9 @@
       ÚLTIMAS NOTÍCIAS
     </strong>
   </div>
-  <div class="row ps-5">
+  <div class="w-100 ps-5">
     <div class="col-12">
-      <div class="mb-4 mt-5" style="max-width: 100%;">
+      <div class="mb-4 mt-3" style="max-width: 100%;">
         <div class="row g-0">
           <div class="p-3 col-sm-12 col-md-6 col-lg-6">
             <div class="dataCard m-3">
@@ -195,7 +197,7 @@
             </div>
             <div class="w-100 d-flex {{isMobile?'flex-wrap justify-content-center':''}}">
               <div [style]="isMobile?'display:none':'display: block;'" class="fs-3 pe-3 mt-2">
-                .......................................................
+                ..............................................
               </div>
               <button type="button"
               class=" {{isMobile?'w-100 d-flex justify-content-center':''}} overlay-layer btn btn-sm btn-danger icon-button d-flex text-start shadow-sm rounded ">
@@ -209,7 +211,7 @@
       </div>
     </div>
 
-    <div class="col-12 align-self-center d-flex justify-content-start mt-3">
+    <div class="col-12 align-self-center d-flex justify-content-start mt-3 ps-3">
       <button class="w-100" type="button"
       class="overlay-layer btn btn-sm btn-outline-dark icon-button d-flex text-start shadow-sm rounded">
         <strong class="defineFontBtns ps-2 pt-1" style="font-size: 25px;">
@@ -221,7 +223,8 @@
   </div>
 
 </div>
-<div class="row justify-content-center mt-5 fundoRosa">
+
+<div class="w-100 d-flex justify-content-center mt-5 fundoRosa">
   <div class="col-8 col-sm-8 col-md-3 col-lg-3 d-flex" [style]="isMobile? 'left: -31px;':'left: -24px;'" style="top: -24px; position: relative;" >
     <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5"></div>
     <div class=" col-3">
@@ -231,19 +234,19 @@
   </div>
 </div>
 
-<div class="row fundoRosa ">
+<div class="w-100 d-flex flex-wrap fundoRosa ">
   <div class="imagemDeFundo" [style]="isMobile? 'left: -24%;':'left: 15%;'">
 
   </div>
-  <div style="position: absolute;">
-    <div class="row d-flex justify-content-center text-center">
+  <div style="position: absolute;" class="w-100">
+    <div class="w-100 d-flex justify-content-center text-center">
       <h1>
         <strong class="fs-2">
           RELATOS DE ALUNOS QUE FORAM APROVADOS
         </strong>
       </h1>
     </div>
-    <div class="row" style="margin-top: 6rem !important">
+    <div class="w-100" style="margin-top: 6rem !important">
       <div class="containerSlide justify-content-center d-flex">
         <div (click)="direita()" class="setaDireita">
           <span class="material-icons">
@@ -257,14 +260,16 @@
         </div>
 
         @for(avaliacoes of ListaAvaliacoes; track avaliacoes; let i = $index){
-          <div id="{{i}}" class="card {{avaliacoes.css}} m-1 mx-3" style="width: 18rem;">
-            <div class="w-100 justify-content-center d-flex" style="position: relative; top: -74px;">
+          <div id="{{i}}" class="card {{avaliacoes.css}} m-1  mx-3" style="width: 18rem;">
+            <div class="w-100 justify-content-center d-flex flex-wrap" style="position: relative; top: -74px;">
               <div class="circle">
                 <img src="{{avaliacoes.src}}">
               </div>
+              <div class="w-100 text-center">
+                <h3 class="card-title"> <strong class="defineFont">{{avaliacoes.nome}}</strong></h3>
+              </div>
             </div>
             <div class="card-body">
-              <h5 class="card-title">{{avaliacoes.nome}}</h5>
               <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
               <a href="#" class="btn btn-primary">Visitar</a>
             </div>
@@ -274,7 +279,15 @@
       </div>
     </div>
   </div>
+  <div class="w-100 d-flex justify-content-center mt-5 ">
+    <div class="col-8 col-sm-8 col-md-3 col-lg-3 d-flex" [style]="isMobile? 'left: -31px;':'left: -24px;'" style="top: 24px; position: relative;" >
+      <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5"></div>
+      <div class=" col-3">
+        <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+      </div>
+      <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-4 mt-4 col-5"></div>
+    </div>
+  </div>
 </div>
-
 
 
