--- a/cursoADVweb/src/styles.scss
+++ b/cursoADVweb/src/styles.scss
@@ -8,6 +8,8 @@
   --vermelhoProInf: #842723;
   --bs-link-color: #842723;
   --bs-link-hover-color: #e64944;
+  // --bs-link-color: #ffffff;
+  // --bs-link-hover-color: #ffc6c4;
   --laranja: #ed8f00
 }
 
