--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -36,8 +36,8 @@
       de incompreensão para tecer uma rede de
       conhecimento, apoio e ação conjunta.</p>
       <div class="col-12 align-self-center d-flex justify-content-start mt-3">
-        <button class="w-100" type="button"
-        class="overlay-layer btn btn-sm btn-outline-dark icon-button d-flex text-start shadow-sm rounded">
+        <button type="button"
+        class="{{isMobile? 'w-100':'ps-3'}} justify-content-center overlay-layer btn btn-sm btn-outline-dark icon-button d-flex text-start shadow-sm rounded">
           <strong class="defineFontBtns ps-2 pt-1" style="font-size: 25px;">
             Conheça nossa equipe...
           </strong>
@@ -45,7 +45,7 @@
         </button>
       </div>
   </div>
-  <div class="col-sm-12 col-md-6 col-lg-6 {{isMobile? 'mx-3 mt-3':''}}">
+  <div class="col-sm-12 col-md-6 col-lg-6 {{isMobile? 'mt-3':''}}">
     <img src="../../../../assets/imgs/quem somos inicio.png" class="" height="{{isMobile?'450':'600'}}">
 
   </div>
@@ -130,7 +130,7 @@
 </div>
 
 <div class="w-100 fundoRosa ">
-  <div class="col-12 {{isMobile? 'px-4':''}}" style="position: relative; top: 27px;" [style]="isMobile?'':'padding-right: 6rem !important; padding-left: 6rem !important;'">
+  <div class="col-12 {{isMobile? 'px-3':''}}" style="position: relative; top: 27px;" [style]="isMobile?'':'padding-right: 6rem !important; padding-left: 6rem !important;'">
     <h1 class="" style="color: #EE5b54; font-size: 40px;"><strong>COMECE A ESTUDAR</strong></h1>
 
     <h3 class="defineFont pt-3 pb-3" style="font-size: 23px;">Veja agora os nossos cursos disponíveis</h3>
@@ -160,7 +160,7 @@
   </div>
 </div>
 
-<div class="w-100 d-flex flex-wrap" style="    padding-left:2rem !important; padding-top: 5rem;">
+<div class="w-100 d-flex flex-wrap" [style]="isMobile? 'padding-left:0.9rem !important': 'padding-left:2rem !important;'" style="padding-top: 5rem;">
   <div class="col-1 pe-2 d-flex justify-content-center mt-4" [style]="isMobile?'margin-left: 2rem !important;':'margin-left: 4rem !important;'">
     <span class="material-icons fs-1" style="color: #EE5b54; font-size: 3.5rem !important;">
       notifications_none
@@ -173,11 +173,11 @@
       ÚLTIMAS NOTÍCIAS
     </strong>
   </div>
-  <div class="w-100 ps-5">
+  <div class="w-100 {{isMobile?'':'px-5'}}">
     <div class="col-12">
       <div class="mb-4 mt-3" style="max-width: 100%;">
         <div class="row g-0">
-          <div class="p-3 col-sm-12 col-md-6 col-lg-6">
+          <div class="{{isMobile?'pe-3':'p-3'}} col-sm-12 col-md-6 col-lg-6">
             <div class="dataCard m-3">
               <div class="fs-3" style="color: #EE5b54;"><strong>11</strong></div>
               <div class="fs-6 pt-1">JUN</div>
@@ -188,19 +188,25 @@
           </div>
           <div class="col-md-6 p-3">
             <div class="" style="border-radius: 6px;">
-              <p class="mt-4" style="text-align: justify; line-height:1.5; font-size: 2.25rem !important;">Lei 10.639/03: pesquisa inédita
+              <p class="mt-4" style="text-align: justify; line-height:1.5; font-size: 2.10rem !important;">Lei 10.639/03: pesquisa inédita
                 traz práticas inspiradoras de seis
                 municípios que promovem o
                 ensino de história e cultura
                 africana e afro-brasileira
                 </p>
             </div>
-            <div class="w-100 d-flex {{isMobile?'flex-wrap justify-content-center':''}}">
-              <div [style]="isMobile?'display:none':'display: block;'" class="fs-3 pe-3 mt-2">
-                ..............................................
+            <div class="w-100 d-flex">
+              <div class="fs-3 pe-3 mt-2" style="color: #EE5b54;">
+                @if (isMobile) {
+                  .....................................
+                } @else {
+                  .....................................................
+
+                }
+
               </div>
               <button type="button"
-              class=" {{isMobile?'w-100 d-flex justify-content-center':''}} overlay-layer btn btn-sm btn-danger icon-button d-flex text-start shadow-sm rounded ">
+              class="overlay-layer btn btn-sm btn-danger icon-button d-flex text-start shadow-sm rounded ">
                 <strong class="defineFontBtns" style="font-size: 25px;">
                   Ler mais
                 </strong>
@@ -211,9 +217,9 @@
       </div>
     </div>
 
-    <div class="col-12 align-self-center d-flex justify-content-start mt-3 ps-3">
-      <button class="w-100" type="button"
-      class="overlay-layer btn btn-sm btn-outline-dark icon-button d-flex text-start shadow-sm rounded">
+    <div class="col-12 align-self-center d-flex justify-content-start mt-3 {{isMobile? '':'ps-3'}} ">
+      <button type="button"
+      class="{{isMobile? 'w-100':''}} overlay-layer btn btn-sm btn-outline-dark icon-button d-flex text-start shadow-sm rounded me-3 justify-content-center">
         <strong class="defineFontBtns ps-2 pt-1" style="font-size: 25px;">
           Veja mais notícias...
         </strong>
@@ -253,28 +259,36 @@
           arrow_forward_ios
           </span>
         </div>
-        <div (click)="esquerda()" class="setaEsquerda">
+        <div (click)="esquerda()" class="setaEsquerda" [style]="isMobile? 'left: 36px !important;':''"  >
           <span class="material-icons">
             arrow_back_ios
             </span>
         </div>
 
         @for(avaliacoes of ListaAvaliacoes; track avaliacoes; let i = $index){
-          <div id="{{i}}" class="card {{avaliacoes.css}} m-1  mx-3" style="width: 18rem;">
+          <div ng id="{{i}}" class="card {{avaliacoes.css}} m-1  mx-3 {{isMobile? avaliacoes.css == 'pequeno'? 'cardMobilePequeno':'cardMobile':'cardTelacheia'}}" >
             <div class="w-100 justify-content-center d-flex flex-wrap" style="position: relative; top: -74px;">
               <div class="circle">
                 <img src="{{avaliacoes.src}}">
               </div>
+              <span class="material-icons aspas">
+                format_quote
+              </span>
               <div class="w-100 text-center">
                 <h3 class="card-title"> <strong class="defineFont">{{avaliacoes.nome}}</strong></h3>
               </div>
             </div>
-            <div class="card-body">
-              <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-              <a href="#" class="btn btn-primary">Visitar</a>
+            <div class="card-body d-flex flex-wrap justify-content-center" style="top: -3rem; position: relative;">
+              <p class="card-text text-center">{{avaliacoes.conteudo}}</p>
+              <div *ngFor="let estrelas of avaliacoes.estrelas" class="pt-3">
+                <span class="material-icons" style="color: #EE5b54;">
+                  star
+                  </span>
+              </div>
             </div>
           </div>
         }
+
 
       </div>
     </div>
