--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -241,7 +241,7 @@
 </div>
 
 <div class="w-100 d-flex flex-wrap fundoRosa ">
-  <div class="imagemDeFundo" [style]="isMobile? 'left: -24%;':'left: 15%;'">
+  <div class="imagemDeFundo" [style]="isMobile? 'width: 1px;':''"  >
 
   </div>
   <div style="position: absolute;" class="w-100">
